Fixed the annoying overflow problem on sidebar. Added nodemon.
make sure to do another npm install before running. Running can now be
done with only the “grunt” command.

--- a/public/styles/scss/common.scss
+++ b/public/styles/scss/common.scss
@@ -77,35 +77,24 @@ html, body{
   width: 130px;
 }
 
-/* SHELF STYLING */
+/* SIDEBAR STYLING */
 .sidebar {
   position: absolute;
-  left: 40px;
+  left: 20px;
+  top: 0px;
   width: 400px;
+  padding: 0 20px;
   height: 100%;
-  background-color: rgba(255,255,255,.85);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
   z-index: 1000;
   transition: left 0.3s ease;
-  &.closed {
-    left: -400px;
-  }
+  overflow-y: hidden;
 }
 
-.sidebar-content{
-  height: 100%;
-}
-
-.sidebar-handle {
-  position: absolute;
-  top: 0px;
-  right: -49px;
-  width: 49px;
-  height: 49px;
-  color: #ccc;
-}
-
-.sidebar-handle:hover {
+.sidebar-content {
+  width: 100%;
+  min-height: 100%;
+  background: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 @keyframes fadein {
@@ -123,12 +112,12 @@ html, body{
   animation: fadein 1s ease;
   display: block;
   position: relative;
-  padding: 15px 12px;
+  padding: 12px 12px;
   border-bottom: 1px solid #ccc;
 }
 
 .stweet:hover {
-  background-color: rgba(255, 0, 150, 0.05);
+  background: rgba(0, 0, 0, 0.05);
 }
 
 .stweet-content {
@@ -154,11 +143,13 @@ html, body{
 
 .stweet-profile-img {
   position: absolute;
+  top: 0px;
   left: -20px;
   width: 40px;
   height: 40px;
   border-radius: 20px;
   border: 3px solid #333;
+  background: #333;
 }
 
 .stweet-text {
